--- a/src/main/webapp/userAfterSaleDetail.html
+++ b/src/main/webapp/userAfterSaleDetail.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="css/admin.css">
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/pintuer.js"></script>
-<scripttype="text/javascript"  src="js/include.js"></script>
+<script type="text/javascript" src="js/include.js"></script>
 <script type="text/javascript" src="js/uploadImg.js"></script>
 <script type="text/javascript" src="js/JquerySession.js"></script>
 <script type="text/javascript" src="js/json.js"></script>
@@ -20,7 +20,7 @@ var orderStatus = sessionStorage.getItem('orderStatus');
 var orderId = sessionStorage.getItem("orderId");
 var pages=0;
 var afterSaleStatusName={"1": "未受理","2": "处理中","3": "处理完成"};
-
+var eventName = {"1":"提交提单", "2":"报价", "3":"确认订单", "4":"发货", "5":"提交售后申请", "6":"售后处理完成", "7":"确认收货"};
 var totalPrice=0//总计金额
 	$(document).ready(function(c) {
 			//初始化方法
@@ -39,9 +39,11 @@ var totalPrice=0//总计金额
              dataType: 'json',     
              contentType:'application/json;charset=UTF-8',//数据返回类型，可以是xml、json等
              success: function (data) {      //成功，回调函数
-            	
-                 data = data.list;
-             	if(data){
+            	if(data){
+            		orderLogList = data.orderLogList;
+             		data = data.list;
+            	}
+             	if(data.length>0){
              		for(var i=0;i<data.length;i++){//data.length是获取data的长度。for循环
                         $("#order").append("<tr><td>"+data[i].goods_name+"</td><td>"+data[i].goods_amount+"</td><td>"+data[i].goods_real_price+"</td></tr>");
                     	totalPrice=data[i].goods_amount*data[i].goods_real_price+totalPrice;
@@ -54,7 +56,15 @@ var totalPrice=0//总计金额
                    	$("#dealWith").html("<strong><b>处理方式：</b><b>"+data[0].handle_way+"</b></strong>");//处理方式
                    	$("#afterSaleStatus").html("<strong><b>售后状态：</b><b>"+afterSaleStatusName[data[0].handle_status]+"</b></strong>");//售后状态	
              	}
-                 
+             	if(pages==1){
+             		if(orderLogList.length>0){//订单日志信息
+                    	  //document.getElementById("orderLog").style.display ="block";
+                    	  for(var i=0;i<orderLogList.length;i++){//data.length是获取data的长度。for循环
+                    		  $("#log").append("<tr><td>"+eventName[parseInt(orderLogList[i].event)]+"</td><td>"+orderLogList[i].handle_time+"</td></tr>");    
+                    	  }
+                      }
+                   	showMsg(1);//显示信息
+             	}
              },
              error: function (er) {          //失败，回调函数
                  alert(er);
@@ -63,6 +73,15 @@ var totalPrice=0//总计金额
 	}
 	function returnLastPage(){//返回上一页
 		window.history.go(-1); // 返回上一页  
+	}
+	function showMsg(type){//展示信息
+		if(type==1){//商品信息
+			document.getElementById("orderLog").style.display ="none";//日志信息不显示
+			document.getElementById("goodsDetail").style.display ="block";//商品信息显示
+		}else{
+			document.getElementById("goodsDetail").style.display ="none";//商品信息不显示
+			document.getElementById("orderLog").style.display ="block";
+		}
 	}
 </script>
 </head>
@@ -81,8 +100,23 @@ var totalPrice=0//总计金额
 		    	</ul>
 		    </div>
   		</td></th>
+  		<tr>
+  			<td>
+	  			<div>
+			    	<ul>
+				    	<li style="float:left;padding:0.2em;"><a href="javascript:showMsg(1)">商品信息</a></li>
+				    	<li style="float:left;padding:0.2em;"><a href="javascript:showMsg(2)">日志信息</a></li>
+			    	</ul>
+			    </div>
+  			</td>
+  		</tr>
   	</table>
-    <table class="table table-hover text-center" id="order">
+  </div>
+</form>
+<p/><p/>
+<div id="goodsDetail" style="display:none;">
+	<b>订单商品信息:</b>
+   <table class="table table-hover text-center" id="order">
       <tr>
         <th>菜名</th>
         <th>数量</th>
@@ -91,13 +125,11 @@ var totalPrice=0//总计金额
       </tr>
       <volist name="list" id="vo">
     </table>
-  </div>
    <div class="footer">
 	<a href="javaScript:findMoreOrderByStatus()">查看更多</a>
-</div>
-  <div id="price" style="float:right;"> 
+	</div>
+	<div id="price" style="float:right;"> 
   </div>
- </form>
   <div id="afterSales">
   	<div >
   		<strong>
@@ -110,10 +142,19 @@ var totalPrice=0//总计金额
   	<div id="afterSaleStatus">
   	</div>
   	<div id="img">
-		
 	</div>
-	
   </div>
+</div>
+<p/><p/>
+<div id="orderLog" style="display=none;">
+	<div><b>订单日志信息:</b></div>
+	<table class="table table-hover text-center" id="log">
+      <tr>
+      	<th>事件</th>
+        <th>时间</th>
+      </tr>
+    </table>
+</div>  
 <script type="text/javascript">
 </script>
 </body>
