--- a/src/main/webapp/userOrderDetail.html
+++ b/src/main/webapp/userOrderDetail.html
@@ -26,7 +26,8 @@
 	var highPrice = sessionStorage.getItem("highPrice");
 	var obj = sessionStorage.getItem('user');//
 	var user=JSON.parse(obj);
-     var message;//请求参数
+    var message;//请求参数
+    var eventName = {"1":"提交提单", "2":"报价", "3":"确认订单", "4":"发货", "5":"提交售后申请", "6":"售后处理完成", "7":"确认收货"};
 	$(document).ready(function(c) {
 		message={
 				"id":orderId,   //orderId
@@ -41,7 +42,9 @@
              contentType:'application/json;charset=UTF-8',
              success: function (data) {      //成功，回调函数
                  //alert(data.result);
-                 data = data.list1;
+             	//data = {"list1":[{"goods_amount":2,"goods_high_price":15.4,"goods_id":2,"goods_low_price":12.5,"goods_name":"青菜","goods_real_price":10,"id":"560454da-3bc4-4b76-b3d0-e6c1cae011cb","order_id":"26508e2f35-5037-4e4f-80ba-10f9ecdfdd28"},{"goods_amount":3,"goods_high_price":15.4,"goods_id":1,"goods_low_price":14.5,"goods_name":"白菜","goods_real_price":10,"id":"aef26d2d-b96e-4a0e-890b-7828779cd632","order_id":"26508e2f35-5037-4e4f-80ba-10f9ecdfdd28"}],"orderLogList":[{"event":1,"handle_time":"2018-5-6","log_id":1,"order_id":"26508e2f35-5037-4e4f-80ba-10f9ecdfdd28"},{"event":2,"handle_time":"2018-5-6","log_id":2,"order_id":"26508e2f35-5037-4e4f-80ba-10f9ecdfdd28"}]};
+                 orderLogList = data.orderLogList; //订单日志列表
+             	 data = data.list1;
                  if(data){
                 	 for(var i=0;i<data.length;i++){//data.length是获取data的长度。for循环
                          $("#order").append("<tr><td>"+data[i].goods_name+"</td><td>"+data[i].goods_low_price+"~"+data[i].goods_high_price+"</td><td>"+data[i].goods_amount+"</td><td>"+data[i].goods_real_price+"</td></tr>");
@@ -52,13 +55,13 @@
 	                  }else{
 	                  	$("#account").text("￥"+lowPrice+"~"+highPrice+"元");//更改订单金额
 	                  }
-	                  if(orderStatus==2){//确认订单详情页面
-	                  	//$('#confirm').attr("display","block");
-	                  	document.getElementById("confirm").style.display ="block";
+	                  if(orderLogList){//订单日志信息
+	                	  //document.getElementById("orderLog").style.display ="block";
+	                	  for(var i=0;i<orderLogList.length;i++){//data.length是获取data的长度。for循环
+	                		  $("#log").append("<tr><td>"+eventName[parseInt(orderLogList[i].event)]+"</td><td>"+orderLogList[i].handle_time+"</td></tr>");    
+	                	  }
 	                  }
-	                  if(orderStatus==4){//待收货订单详情页面。可以提交售后信息
-	                  	document.getElementById("afterSales").style.display ="block";
-	                  }
+	                  showMsg(1);//默认展示商品信息
                  }
              },
              error: function (er) {          //失败，回调函数
@@ -313,6 +316,22 @@
 			             }
 			         });
 		 }
+	function showMsg(type){//展示信息
+		if(type==1){//商品信息
+			document.getElementById("orderLog").style.display ="none";//日志信息不显示
+			document.getElementById("goodsDetail").style.display ="block";//商品信息显示
+		 	if(orderStatus==2){//确认订单详情页面
+            	//$('#confirm').attr("display","block");
+            	document.getElementById("confirm").style.display ="block";
+            }
+            if(orderStatus==4){//待收货订单详情页面。可以提交售后信息
+            	document.getElementById("afterSales").style.display ="block";
+            }
+		}else{
+			document.getElementById("goodsDetail").style.display ="none";//商品信息不显示
+			document.getElementById("orderLog").style.display ="block";
+		}
+	}
 </script>
 </head>
 <body>
@@ -330,7 +349,21 @@
 		    	</ul>
 		    </div>
   		</td></th>
+  		<tr>
+  			<td>
+	  			<div>
+			    	<ul>
+				    	<li style="float:left;padding:0.2em;"><a href="javascript:showMsg(1)">商品信息</a></li>
+				    	<li style="float:left;padding:0.2em;"><a href="javascript:showMsg(2)">日志信息</a></li>
+			    	</ul>
+			    </div>
+  			</td>
+  		</tr>
   	</table>
+  </div>
+</form>
+  <p/><p/>
+  <div id="goodsDetail" style="display:none;"><b>订单商品信息:</b>
     <table class="table table-hover text-center" id="order">
       <tr>
         <th>品名</th>
@@ -340,10 +373,9 @@
       </tr>
       <volist name="list" id="vo">
     </table>
-  </div>
   <div class="footer">
 	<a href="javaScript:findMoreOrderByStatus()">查看更多</a>
-</div>
+  </div>
   <div id="price"> 
   	<strong>
   		<b>交易状态：</b>
@@ -352,7 +384,7 @@
   		<b id="account">￥16.30元</b>
   	</strong>
   </div>
- </form>
+
  <div id="confirm" style="display:none;">
  	<input type="button" value="确认订单" onclick="confirmOrder()"/>
  	<input type="button" value="取消订单" onclick="cancelOrder()"/>
@@ -362,7 +394,6 @@
   		<strong>
   			<b>申请售后原因：</b>
   		</strong>
-  			
   		<input type="textarea" value="" id="reason"></input>
   		<input type="button" onclick="updateAftersale()" value="提交"/>
   		<input type="button" onclick="confirmReceive()" value="确认收货"/>
@@ -377,5 +408,16 @@
 		<div id="container"></div>
 	</div>
   </div>
+</div>
+<p/><p/>
+<div id="orderLog" style="display=none;">
+	<div><b>订单日志信息:</b></div>
+	<table class="table table-hover text-center" id="log">
+      <tr>
+      	<th>事件</th>
+        <th>时间</th>
+      </tr>
+    </table>
+</div>
 </body>
 </html>
