--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -92,7 +92,7 @@
 	<div id="user" style="display:none;">
 		<div class="container"></div>
 		<table>
-			<th><td><b>农业精准扶贫客户端</b></td></th>
+			<tr><td><b>农业精准扶贫客户端</b></td></tr>
 			<tr>
 				<td>
 				<div class="title">
@@ -111,7 +111,7 @@
 	<div class="container"></div>
 	  
 	  	<table>
-	  		<th><td><b>农业精准扶贫供应商端</b></td></th>
+	  		<tr><td><b>农业精准扶贫供应商端</b></td></tr>
 	  		<tr><td>
 	  			<div class="title">
 			    	<ul>
