--- a/src/main/webapp/clientAfterSaleDetail.html
+++ b/src/main/webapp/clientAfterSaleDetail.html
@@ -57,7 +57,8 @@ var totalPrice=0//总计金额
                    	$("#afterSaleStatus").html("<strong><b>售后状态：</b><b>"+afterSaleStatusName[data[0].handle_status]+"</b></strong>");//售后状态	
                    	if(data[0].handle_status==1){//未处理
                    		$("#dealWith").html("<strong><b>处理方式：</b><input type='text' id='handWay'/></strong>");//处理方式
-                   		$("#dealWith").append("<input type='button' onclick=\"updateAfterSale('"+data[0].after_sale_id+"')\" value='提交'/>");//处理方式
+                   		$("#dealWith").append("</p><select id='handlingOpinions'><option value='1'>同意</option><option value='2' selected>驳回</option></select>");//是否同意申请
+                   		$("#dealWith").append("</p><input type='button' onclick=\"updateAfterSale('"+data[0].after_sale_id+"')\" value='提交'/>");//处理方式
                    	}
              	}
              	if(pages==1){
@@ -134,7 +135,7 @@ var totalPrice=0//总计金额
   <div class="panel admin-panel">
     <div class="panel-head"><strong> 订单详情</strong></div>
     <table>
-  		<th><td>
+  		<tr><td>
   			<div class="title">
 		    	<ul>
 			    	<li style="float:left;padding:0.2em;"><a href="./index.html">返回首页</a></li>
@@ -142,7 +143,7 @@ var totalPrice=0//总计金额
 			    	<!-- <li style="float:left;padding:0.2em;"><a href="./myBasket.html">我的菜篮</a></li> -->
 		    	</ul>
 		    </div>
-  		</td></th>
+  		</td></tr>
   		<tr>
   			<td>
 	  			<div>
