--- a/src/main/webapp/clientBill.html
+++ b/src/main/webapp/clientBill.html
@@ -23,8 +23,8 @@ if(!payStatus){
 }
 	$(document).ready(function(c) {
 			//初始化方法
-        findMoreOrder();//查找账单
-		
+        //findMoreOrder();//查找账单
+        findMoreAllOrder();
 	});
 	function getOrder(payStatus){//获取1：本月账单，2：上月待支付账单 3：历史账单
 		pages=0;
