--- a/src/main/webapp/pendingQuateOrderDetail.html
+++ b/src/main/webapp/pendingQuateOrderDetail.html
@@ -16,7 +16,7 @@
 <script>
 var orderId =sessionStorage.getItem("orderId");
 var pages = 0;
-var eventName = {"1":"提交提单", "2":"报价", "3":"确认订单", "4":"发货", "5":"提交售后申请", "6":"售后处理完成", "7":"确认收货"};
+var eventName = {"1":"提交提单", "2":"报价", "3":"确认订单", "4":"发货", "5":"提交售后申请", "6":"售后处理完成", "7":"确认收货","8":"付款", "9":"取消售后申请"};
 
 $(document).ready(function(c) {
 
