--- a/src/main/webapp/userOrderList.html
+++ b/src/main/webapp/userOrderList.html
@@ -92,7 +92,7 @@ function findMoreOrderByStatus(){
   			<div class="title">
 		    	<ul>
 			    	<li style="float:left;padding:0.2em;"><a href="./index.html">返回首页</a></li>
-			    	<li style="float:left;padding:0.2em;"><a href="javascript:returnLastPage()">返回上一级</a></li>
+			    	<!-- <li style="float:left;padding:0.2em;"><a href="javascript:returnLastPage()">返回上一级</a></li> -->
 			    	<li style="float:left;padding:0.2em;"><a href="./myBasket.html">我的菜篮</a></li>
 		    	</ul>
 		    </div>
