--- a/src/main/webapp/forgetPassword.html
+++ b/src/main/webapp/forgetPassword.html
@@ -53,14 +53,13 @@
 	            success: function (data) {      //成功，回调函数
 	               
 	                if(data.result==1){
-	                	alert("密码重置成功");
 	            		window.location.href="./user.html";
 	            	}else{
 	            		alert("密码重置失败");
 	            	}
 	            },
 	            error: function (er) {          //失败，回调函数
-	            	alert("密码重置成功");
+	            	alert("密码重置失败");
 	            }
 	        });
 	}
