--- a/src/main/webapp/goodsList.html
+++ b/src/main/webapp/goodsList.html
@@ -130,7 +130,7 @@
              contentType:'application/json;charset=UTF-8',
              success: function (data) {      //成功，回调函数    画页面
             	 if(data){
-            		 alert("添加成功");
+            		 //alert("添加成功");
             	 }
                    },
              error: function (er) {          //失败，回调函数
