--- a/src/main/webapp/myAddress.html
+++ b/src/main/webapp/myAddress.html
@@ -63,7 +63,7 @@
 	             dataType: 'json',              //数据返回类型，可以是xml、json等
 	             success: function (data) {      //成功，回调函数    画页面
 	            	 	if(data){
-	            	 		alert("设置成功");
+	            	 		//alert("设置成功");
 	            	 	}
 	             },
 	             error: function (er) {          //失败，回调函数
