--- a/src/main/webapp/userOrderDetail.html
+++ b/src/main/webapp/userOrderDetail.html
@@ -348,7 +348,7 @@
 	  			<div>
 			    	<ul>
 				    	<li style="float:left;padding:0.2em;"><a href="javascript:showMsg(1)">商品信息</a></li>
-				    	<li style="float:left;padding:0.2em;"><a href="javascript:showMsg(2)">日志信息</a></li>
+				    	<li style="float:left;padding:0.2em;"><a href="javascript:showMsg(2)">订单状态流转信息</a></li>
 			    	</ul>
 			    </div>
   			</td>
@@ -405,7 +405,7 @@
 </div>
 <p/><p/>
 <div id="orderLog" style="display=none;">
-	<div><b>订单日志信息:</b></div>
+	<div><b>订单状态流转信息:</b></div>
 	<table class="table table-hover text-center" id="log">
       <tr>
       	<th>事件</th>
