--- a/src/main/webapp/clientOrderDetail.html
+++ b/src/main/webapp/clientOrderDetail.html
@@ -55,7 +55,7 @@
                      	findAfterSaleInfo(data.id);//售后信息查询
                      }
                      if(orderStatus==3){
-               			$('#updateOrderStatus').append('<input type="button" value="已发货" onclick="updateOrderStatus()">');
+               			$('#updateOrderStatus').append('<input type="button" value="发货" onclick="updateOrderStatus()">');
                		 }
                      if(orderLogList){//订单日志信息
 	                	  //document.getElementById("orderLog").style.display ="block";
@@ -188,7 +188,7 @@
 	  			<div>
 			    	<ul>
 				    	<li style="float:left;padding:0.2em;"><a href="javascript:showMsg(1)">商品信息</a></li>
-				    	<li style="float:left;padding:0.2em;"><a href="javascript:showMsg(2)">日志信息</a></li>
+				    	<li style="float:left;padding:0.2em;"><a href="javascript:showMsg(2)">订单状态流转信息</a></li>
 			    	</ul>
 			    </div>
   			</td>
@@ -234,7 +234,7 @@
 </div>
 <p/><p/>
 <div id="orderLog" style="display=none;">
-	<div><b>订单日志信息:</b></div>
+	<div><b>订单状态流转信息:</b></div>
 	<table class="table table-hover text-center" id="log">
       <tr>
       	<th>事件</th>
