--- a/src/main/webapp/orderSubmit.html
+++ b/src/main/webapp/orderSubmit.html
@@ -103,7 +103,7 @@
         </tr>
    		<tr>
           <td><label>请选择配送日期：</label></td>
-          <td><input id="deliveryDate" type="date" value="2014-01-13"/></td>
+          <td><input id="deliveryDate" type="date" /></td>
         </tr>
         <tr>
           <td></td>
