--- a/src/main/webapp/userAfterSaleDetail.html
+++ b/src/main/webapp/userAfterSaleDetail.html
@@ -1,4 +1,4 @@
-\<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="zh-cn">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -105,7 +105,7 @@ var totalPrice=0//总计金额
 	  			<div>
 			    	<ul>
 				    	<li style="float:left;padding:0.2em;"><a href="javascript:showMsg(1)">商品信息</a></li>
-				    	<li style="float:left;padding:0.2em;"><a href="javascript:showMsg(2)">日志信息</a></li>
+				    	<li style="float:left;padding:0.2em;"><a href="javascript:showMsg(2)">订单状态流转信息</a></li>
 			    	</ul>
 			    </div>
   			</td>
@@ -147,7 +147,7 @@ var totalPrice=0//总计金额
 </div>
 <p/><p/>
 <div id="orderLog" style="display=none;">
-	<div><b>订单日志信息:</b></div>
+	<div><b>订单状态流转信息:</b></div>
 	<table class="table table-hover text-center" id="log">
       <tr>
       	<th>事件</th>
