add delete item interface

--- a/src/main/webapp/clientBill.html
+++ b/src/main/webapp/clientBill.html
@@ -213,7 +213,7 @@ if(!payStatus){
     </table>
   </div>
   <div>
-  	<strong style="float:right;"><b>本月应付金额:</b>
+  	<strong style="float:right;"><b>该客户本月应付金额:</b>
   		<b id="account">￥0 元</b>
   	</strong>
   </div>
